--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/community_feed
+    url: jdbc:mysql://localhost:3306/commnuity_feed
     username: root
     password: qwer1234
 
